<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorActivityMainBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_main_title_padding_top"
        android:paddingBottom="@dimen/activity_main_title_padding_bottom"
        android:text="@string/main_activity_title_textview"
        android:textSize="20sp"
        android:textColor="@color/colorUdacius" />

    <Button
        android:id="@+id/popular_movies_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:text="@string/popular_movies"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacius"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/stock_hawk_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:text="@string/stock_hawk"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorUdacius"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:text="@string/build_it_bigger"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_main_button_margin_top"
        android:background="@color/colorUdacius"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/make_your_app_material_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:text="@string/make_your_app_material"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_main_button_margin_top"
        android:background="@color/colorUdacius"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/go_ubiquitous_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:text="@string/go_ubiquitous"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_main_button_margin_top"
        android:background="@color/colorUdacius"
        android:onClick="onButtonClick" />

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="@dimen/activity_main_button_width"
        android:layout_height="@dimen/activity_main_button_height"
        android:text="@string/capstone"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_main_button_margin_top"
        android:background="@color/colorUdacius"
        android:onClick="onButtonClick" />

</LinearLayout>
